RESOLVED FIXED 139596
Subpixel rendering: REGRESSION (r163272): Fixed positioned pseudo content leaves trails while scrolling.
https://bugs.webkit.org/show_bug.cgi?id=139596
Summary Subpixel rendering: REGRESSION (r163272): Fixed positioned pseudo content lea...
alan
Reported 2014-12-12 14:02:37 PST
1. go to http://ktinboulder.com/2014/10/16/my-last-day-at-pivotdesk/ 2. start scrolling. 3. notice the fixed element on the left edge of the page leaves trails as the viewport is being scrolled.
Attachments
Test reduction. (846 bytes, text/html)
2014-12-12 14:03 PST, alan
no flags
Patch (2.04 KB, patch)
2014-12-12 14:26 PST, alan
no flags
Patch (2.05 KB, patch)
2014-12-12 14:29 PST, alan
no flags
alan
Comment 1 2014-12-12 14:03:33 PST
Created attachment 243213 [details] Test reduction.
alan
Comment 2 2014-12-12 14:03:55 PST
alan
Comment 3 2014-12-12 14:26:15 PST
alan
Comment 4 2014-12-12 14:29:31 PST
WebKit Commit Bot
Comment 5 2014-12-12 15:35:04 PST
Comment on attachment 243217 [details] Patch Clearing flags on attachment: 243217 Committed r177243: <http://trac.webkit.org/changeset/177243>
WebKit Commit Bot
Comment 6 2014-12-12 15:35:10 PST
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 7 2014-12-14 18:46:09 PST
Re-opened since this is blocked by bug 139632
Alexey Proskuryakov
Comment 8 2014-12-19 12:18:17 PST
I'm not sure why commit queue re-opened this bug, but it doesn't look like the patch was rolled out.
Note You need to log in before you can comment on or make changes to this bug.