https://bugs.webkit.org/show_bug.cgi?id=139596 Subpixel rendering: REGRESSION (r163272): Fixed positioned pseudo content leaves trails while scrolling. rdar://problem/18697851

Reviewed by Simon Fraser.

Final repaint rect at FrameView::scrollContentsFastPath needs to be pixel aligned (as opposed to snap to int).
However we can't pixelsnap it until after ScrollView finished transitioning to Float/LayoutRect.
Use enclosing int rect for now to ensure scrolling does not leave trails.

Unable to test. Apparently scrolling clears trails in dumprendertree. (repaint rects are not useful either with scrolling)

* page/FrameView.cpp:
(WebCore::FrameView::scrollContentsFastPath):


Canonical link: https://commits.webkit.org/157483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177243 268f45cc-cd09-0410-ab3c-d52691b4dbfc